<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_maps">

    <fragment
        android:id="@+id/navigation_maps"
        android:name="ipvc.ei20799.smartcity.ui.mapa.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_notas"
        android:name="ipvc.ei20799.smartcity.ui.notas.NotasFragment"
        android:label="@string/title_notas"
        tools:layout="@layout/fragment_notas" />

    <fragment
        android:id="@+id/navigation_conta"
        android:name="ipvc.ei20799.smartcity.ui.conta.ContaFragment"
        android:label="@string/title_conta"
        tools:layout="@layout/fragment_conta" />
</navigation>