<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mapa.ViewReport"
    android:layout_marginVertical="20sp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp" >

            <TextView
                android:id="@+id/newReportTitle"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ReportTitle"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="10sp"/>

            <TextView
                android:id="@+id/ViewTituloReport"
                android:textSize="20sp"
                android:layout_below="@+id/newReportTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EditText_title" />

            <TextView
                android:id="@+id/TextTipoReport"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipoReport"
                android:layout_below="@id/ViewTituloReport"
                android:layout_marginVertical="5sp"/>

            <TextView
                android:id="@+id/ViewTipoReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_below="@id/TextTipoReport"
                android:text="@string/loading"/>

            <TextView
                android:background="@null"
                android:id="@+id/ViewDescricaoReport"
                android:layout_width="match_parent"
                android:layout_height="180sp"
                android:gravity="top"
                android:hint="@string/EditText_body"
                android:layout_marginVertical="10sp"
                android:layout_below="@id/ViewTipoReport"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"  />

            <ImageView
                android:id="@+id/viewImage"
                android:layout_width="match_parent"
                android:layout_height="180sp"
                android:scaleType="centerCrop"
                android:layout_marginHorizontal="50sp"
                app:srcCompat="@drawable/ic_baseline_insert_photo_24"
                android:layout_below="@id/ViewDescricaoReport" />

        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_marginHorizontal="20sp" >

        <TextView
            android:id="@+id/ViewReportDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="dd/mm/aaa hh:mm"
            android:textSize="20sp"/>

    </RelativeLayout>

</LinearLayout>