<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mapa.NewReport"
    android:layout_marginHorizontal="20sp"
    android:layout_marginVertical="20sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/newReportTitle"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/criarReportTitle"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="10sp"/>

        <EditText
            android:id="@+id/EditTituloReport"
            android:textSize="20sp"
            android:layout_below="@+id/newReportTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EditText_title"
            android:inputType="text" />

        <TextView
            android:id="@+id/TextTipoReport"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipoReport"
            android:layout_below="@id/EditTituloReport"
            android:layout_marginVertical="5sp"/>

        <Spinner
            android:id="@+id/SpinnerEditReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TextTipoReport"/>

        <EditText
            android:background="@null"
            android:id="@+id/EditDescricaoReport"
            android:layout_width="match_parent"
            android:layout_height="180sp"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:hint="@string/EditText_body"
            android:layout_marginVertical="10sp"
            android:layout_below="@id/SpinnerEditReport" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/EditDescricaoReport">
            <ImageView
                android:id="@+id/editImage"
                android:layout_width="match_parent"
                android:layout_height="180sp"
                android:scaleType="centerCrop"
                android:layout_marginHorizontal="50sp"
                app:srcCompat="@drawable/ic_baseline_insert_photo_24" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editImage"
                android:layout_centerHorizontal="true">
                <Button
                    android:id="@+id/editTirarFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5sp"
                    android:text="@string/tirarFoto" />
                <Button
                    android:id="@+id/editEscolherFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5sp"
                    android:text="@string/escolherFoto" />
            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff">

        <ImageButton
            android:id="@+id/editReportSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_save_black_36dp"/>

        <TextView
            android:id="@+id/editReportDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="dd/mm/aaa hh:mm"
            android:textSize="20sp"/>

        <ImageButton
            android:id="@+id/editReportDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_delete_black_36dp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</RelativeLayout>