<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mapa.MapsFragment" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/layoutFiltros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/map" >
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/newReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_map_marker"
            app:maxImageSize="40dp"
            app:fabCustomSize="45dp"
            android:layout_marginEnd="5dp"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/newRadius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_map_radius"
            app:maxImageSize="40dp"
            app:fabCustomSize="45dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFiltros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_horizontal"
        android:background="#CC808080"
        android:layout_marginBottom="10dp" >

        <RadioGroup
            android:id="@+id/radiosFiltros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="10dp" >
            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingEnd="10dp"
                android:text="@string/tipoTodos"
                android:textColor="@color/white"/>
            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:text="@string/tipoAcidentes"
                android:textColor="@color/white"/>
            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:text="@string/tipoObras"
                android:textColor="@color/white"/>
        </RadioGroup>

        <Button
            android:id="@+id/buttonDistancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distanciaSo"
            android:layout_marginEnd="10dp"
            android:textSize="12sp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>